--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "FirePress_Attila",
-    "description": "FirePress_Attila is a Ghost theme supported by FirePress. It's part of the curated themes collection. See them all at https://bit.ly/2HB6Fyu",
+    "description": "FirePress_Attila is a Ghost theme supported by FirePress. It's part of the Ghost-Theme-Curated-Collection. Find it at https://bit.ly/2HB6Fyu",
     "demo": "https://play-with-ghost.com/",
     "version": "1.5.0C",
     "engines": {
@@ -25,7 +25,9 @@
     },
     "keywords": [
         "ghost",
-        "theme"
+        "theme",
+        "minimal",
+        "responsive"
     ],
     "repository": {
         "type": "git",
