--- a/package.json
+++ b/package.json
@@ -1,50 +1,49 @@
 {
-    "name": "FirePress_Attila",
-    "description": "FirePress_Attila is a Ghost theme supported by FirePress. It's part of the Ghost-Theme-Curated-Collection. Find it at https://bit.ly/2HB6Fyu",
-    "demo": "https://play-with-ghost.com/",
-    "version": "1.5.0C",
-    "engines": {
-        "ghost": ">=1.2.0"
-    },
-    "license": "MIT",
-    "screenshots": {
-        "desktop": "src/screenshot-desktop.jpg",
-        "mobile": "src/screenshot-mobile.jpg"
-    },
-    "author": {
-        "name": "Peter Amende",
-        "email": "xoxo@zutrinken.com",
-        "url": "http://zutrinken.com"
-    },
-    "gpm": {
-        "type": "theme",
-        "categories": [
-            "Minimal",
-            "Personal Blogs"
-        ]
-    },
-    "keywords": [
-        "ghost",
-        "theme",
-        "minimal",
-        "responsive"
-    ],
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/firepress-org/FirePress_Attila.git"
-    },
-    "devDependencies": {
-        "autoprefixer-core": "^6.0.1",
-        "grunt": "^1.0.1",
-        "grunt-contrib-clean": "^1.1.0",
-        "grunt-contrib-copy": "^1.0.0",
-        "grunt-contrib-uglify": "^3.3.0",
-        "grunt-contrib-watch": "^1.0.0",
-        "grunt-postcss": "^0.9.0",
-        "grunt-sass": "^2.1.0",
-        "load-grunt-tasks": "^3.5.2"
-    },
-    "config": {
-        "posts_per_page": 10
-    }
+  "name": "attila",
+  "description": "Ghost Theme",
+  "demo": "http://attila.zutrinken.com",
+  "version": "1.7.5",
+  "engines": {
+    "ghost": ">=2.1.0"
+  },
+  "license": "MIT",
+  "screenshots": {
+    "desktop": "src/screenshot-desktop.jpg",
+    "mobile": "src/screenshot-mobile.jpg"
+  },
+  "author": {
+    "name": "Peter Amende",
+    "email": "xoxo@zutrinken.com",
+    "url": "http://zutrinken.com"
+  },
+  "gpm": {
+    "type": "theme",
+    "categories": [
+      "Minimal",
+      "Personal Blogs"
+    ]
+  },
+  "keywords": [
+    "ghost-theme",
+    "ghost",
+    "theme"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/zutrinken/attila.git"
+  },
+  "devDependencies": {
+    "autoprefixer-core": "^6.0.1",
+    "grunt": "^1.0.1",
+    "grunt-contrib-clean": "^1.1.0",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-uglify": "^3.3.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-postcss": "^0.9.0",
+    "grunt-sass": "^2.1.0",
+    "load-grunt-tasks": "^3.5.2"
+  },
+  "config": {
+    "posts_per_page": 10
+  }
 }
