--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "FirePress_Attila",
-    "description": "This Ghost theme is supported by FirePress. Find more free themes at https://github.com/topics/firepress-ghost-theme",
-    "demo": "https://play-with-ghost.com/ghost-themes/firepress-attila-for-barbershops/",
+  "name": "FirePress_Attila",
+  "description": "This Ghost theme is supported by FirePress. Find more free themes at https://github.com/topics/firepress-ghost-theme",
+  "demo": "https://play-with-ghost.com/ghost-themes/firepress-attila-for-barbershops/",
   "version": "1.7.6",
   "engines": {
     "ghost": ">=2.1.0"
@@ -31,15 +31,14 @@
   "keywords": [
     "ghost-theme",
     "ghost",
-    "theme",
-    "FirePress"
+    "theme"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/firepress-org/FirePress_Attila.git"
+    "url": "https://github.com/zutrinken/attila.git"
   },
   "devDependencies": {
-    "autoprefixer-core": "^6.0.1",
+    "autoprefixer": "^9.1.5",
     "grunt": "^1.0.1",
     "grunt-contrib-clean": "^1.1.0",
     "grunt-contrib-copy": "^1.0.0",
@@ -47,6 +46,7 @@
     "grunt-contrib-watch": "^1.0.0",
     "grunt-postcss": "^0.9.0",
     "grunt-sass": "^2.1.0",
+    "grunt-zip": "^0.18.1",
     "load-grunt-tasks": "^3.5.2"
   },
   "config": {
